--- a/chrome/bootflasher/_locales/en/messages.json
+++ b/chrome/bootflasher/_locales/en/messages.json
@@ -4,5 +4,12 @@
 	},
 	"extDescription": {
 		"message": "Tools for flashing bootloaders to Tau Labs flight controller boards."
+	},
+
+	"pleaseSelectBoard": {
+		"message": "Which board would you like to flash?"
+	},
+	"continue": {
+		"message": "Continue"
 	}
 }
