BootFlasher: UI progress

--- a/chrome/bootflasher/_locales/en/messages.json
+++ b/chrome/bootflasher/_locales/en/messages.json
@@ -24,5 +24,12 @@
 	},
 	"operationEraseEeprom": {
 		"message": "Erase Data &amp; Settings"
+	},
+
+	"flashingFirmware": {
+		"message": "Flashing firmware..."
+	},
+	"flashingBootloader": {
+		"message": "Flashing bootloader..."
 	}
 }
